Feature create blocking project (#470)
* added 'uses_blocking' flag to the project table

* project insertion supports new uses_blocking flag

* added 'uses_blocking' flag. defaults to False

* ProjectDescription contains an additional value now

* added 'uses_blocking' flag to NewProject.

* tests that the 'uses_blocking' flag is set and reported properly
